<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:layoutDirection="ltr">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="4dp"
                android:text="@string/sing_in"
                android:textColor="@color/black"
                android:textSize="18sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="4dp"

                android:src="@drawable/ic_baseline_arrow_back_24" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit_information"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="16dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_add_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/pale_blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_add_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_add_lastName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/last_name"
                        android:textColorHint="@color/pale_blue"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_add_lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_add_phoneNumber"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/phone_number"
                        android:textColorHint="@color/pale_blue"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_add_phoneNumber"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_add_landlinePhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/landline_phone"
                        android:textColorHint="@color/pale_blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_add_landlinePhone"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="16dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/address"
                        android:textColor="@color/pale_blue"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_address"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColorHint="@color/pale_blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_add_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        >

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:layout_centerVertical="true"
                            android:textColor="@color/pale_blue"
                            android:textSize="18sp"
                            android:layout_alignParentRight="true" />

                        <RadioGroup
                            android:id="@+id/rg_add_gender"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_marginRight="8dp"
                                android:text="@string/man"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:text="@string/woman"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>

                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <Button
                android:id="@+id/btn_addLocation_goToMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_step"
                android:layout_gravity="bottom|center_horizontal"
                android:backgroundTint="@color/pale_green"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="16dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>