<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/list_address"
        android:textColor="@color/pale_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_home_addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_location"
        android:textColor="@color/white"
        app:icon="@drawable/add_location"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_home_address"
        app:layout_constraintStart_toStartOf="@+id/rv_home_address"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageViewrefresh"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_home_addLocation"
        app:layout_constraintEnd_toEndOf="@+id/rv_home_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_baseline_refresh" />

    <TextView
        android:id="@+id/textViewRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again"
        android:visibility="gone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageViewrefresh"
        app:layout_constraintStart_toStartOf="@+id/imageViewrefresh"
        app:layout_constraintTop_toBottomOf="@+id/imageViewrefresh" />
</androidx.constraintlayout.widget.ConstraintLayout>